fixing the alignment of the spinner
on the checkout page beside the continue buttons

--- a/css/sass/public/_checkout_box.scss
+++ b/css/sass/public/_checkout_box.scss
@@ -7,7 +7,10 @@
 			float: left;
 			a { margin-right: 1em; }
 		}
-		.cart_checkout_box_actions_right { float: right; }
+		.cart_checkout_box_actions_right {
+			float: right;
+			.xm_spinner { float: right; }
+		}
 	}
 
 	.cart_billing_container {
